:tractor: Reformat Code

--- a/app/src/main/res/drawable/ic_briefcase.xml
+++ b/app/src/main/res/drawable/ic_briefcase.xml
@@ -1,13 +1,51 @@
-<vector android:height="24dp" android:viewportHeight="58.0"
-    android:viewportWidth="58.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="58.0"
+    android:viewportWidth="58.0">
+    <path
+        android:fillColor="#00000000"
         android:pathData="M19,17V7.21C19,5.99 19.99,5 21.21,5h15.59C38.01,5 39,5.99 39,7.21V17"
-        android:strokeColor="#556080" android:strokeLineCap="round" android:strokeWidth="2"/>
-    <path android:fillColor="#A97C50" android:pathData="M55.99,54H2.01C0.9,54 0,53.1 0,51.99V16.01C0,14.9 0.9,14 2.01,14H55.99C57.1,14 58,14.9 58,16.01V51.99C58,53.1 57.1,54 55.99,54z"/>
-    <path android:fillColor="#997046" android:pathData="M8,14H2.01C0.9,14 0,14.9 0,16.01V51.99C0,53.1 0.9,54 2.01,54H8V14z"/>
-    <path android:fillColor="#997046" android:pathData="M55.99,14H50v40h5.99C57.1,54 58,53.1 58,51.99V16.01C58,14.9 57.1,14 55.99,14z"/>
-    <path android:fillColor="#D1A074" android:pathData="M7,14h2v40h-2z"/>
-    <path android:fillColor="#D1A074" android:pathData="M49,14h2v40h-2z"/>
-    <path android:fillColor="#C7CAC7" android:pathData="M5,11h8v3h-8z"/>
-    <path android:fillColor="#C7CAC7" android:pathData="M45,11h8v3h-8z"/>
+        android:strokeColor="#556080"
+        android:strokeLineCap="round"
+        android:strokeWidth="2" />
+    <path
+        android:fillColor="#A97C50"
+        android:pathData="M55.99,54H2.01C0.9,54 0,53.1 0,51.99V16.01C0,14.9 0.9,14 2.01,14H55.99C57.1,14 58,14.9 58,16.01V51.99C58,53.1 57.1,54 55.99,54z" />
+    <path
+        android:fillColor="#997046"
+        android:pathData="M8,14H2.01C0.9,14 0,14.9 0,16.01V51.99C0,53.1 0.9,54 2.01,54H8V14z" />
+    <path
+        android:fillColor="#997046"
+        android:pathData="M55.99,14H50v40h5.99C57.1,54 58,53.1 58,51.99V16.01C58,14.9 57.1,14 55.99,14z" />
+    <path
+        android:fillColor="#D1A074"
+        android:pathData="M7,14h2v40h-2z" />
+    <path
+        android:fillColor="#D1A074"
+        android:pathData="M49,14h2v40h-2z" />
+    <path
+        android:fillColor="#C7CAC7"
+        android:pathData="M5,11h8v3h-8z" />
+    <path
+        android:fillColor="#C7CAC7"
+        android:pathData="M45,11h8v3h-8z" />
 </vector>
