--- a/app/src/main/res/layout/fragment_course_animalhusbandry_cell_content.xml
+++ b/app/src/main/res/layout/fragment_course_animalhusbandry_cell_content.xml
@@ -1,10 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#16a085"
     android:orientation="vertical"
-    android:visibility="gone"
-    android:background="#16a085">
+    android:visibility="gone">
 
     <!-- content header line -->
     <RelativeLayout
@@ -25,29 +42,30 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
 
-         <ImageView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:src="@drawable/ic_rating"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5"
-            android:textSize="20sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_rating" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/menu_icon"
-            android:layout_alignParentLeft="true" />
+            android:src="@drawable/menu_icon" />
 
     </RelativeLayout>
 
@@ -62,15 +80,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_trainingpartner2"/>
+                android:src="@drawable/ic_trainingpartner2" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Partner Name: AISECT"/>
+                android:text="Partner Name: AISECT" />
         </LinearLayout>
 
         <LinearLayout
@@ -78,15 +97,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_rupee"/>
+                android:src="@drawable/ic_rupee" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Course Fee: 25000"/>
+                android:text="Course Fee: 25000" />
         </LinearLayout>
 
         <LinearLayout
@@ -94,15 +114,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_briefcase"/>
+                android:src="@drawable/ic_briefcase" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Job Role: Senior Dairy Manager"/>
+                android:text="Job Role: Senior Dairy Manager" />
         </LinearLayout>
 
     </LinearLayout>
@@ -122,12 +143,12 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_calendar"/>
+                android:src="@drawable/ic_calendar" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Course Duration: 8 weeks"/>
+                android:text="Course Duration: 8 weeks" />
 
         </LinearLayout>
 
@@ -136,17 +157,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_sign"/>
+                android:src="@drawable/ic_sign" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Address: 25/53,AMmpa Nagar,Karna,Delhi"/>
+                android:text="Address: 25/53,AMmpa Nagar,Karna,Delhi" />
         </LinearLayout>
-
 
 
         <TextView
@@ -154,9 +175,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="#ffffff"
             android:padding="10dp"
             android:text="CONTACT"
-            android:background="#ffffff"
             android:textAlignment="center"
             android:textSize="20sp" />
     </LinearLayout>
