--- a/app/src/main/res/layout/fragment_course_animalhusbandry_cell_title.xml
+++ b/app/src/main/res/layout/fragment_course_animalhusbandry_cell_title.xml
@@ -1,9 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#16a085">'
+    android:background="#16a085"
+    android:orientation="vertical">'
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,33 +29,34 @@
         android:weightSum="1">
 
         <TextView
+            android:id="@+id/training_center_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Centre Name: AISECT TRAINING CENTER"
             android:layout_alignParentLeft="true"
-            android:id="@+id/training_center_name"
+            android:layout_weight="0.99"
             android:padding="10dp"
-            android:layout_weight="0.99" />
+            android:text="Centre Name: AISECT TRAINING CENTER" />
 
         <LinearLayout
+            android:id="@+id/rating"
             android:layout_width="66dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:id="@+id/rating"
+            android:orientation="horizontal"
             android:padding="10dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_rating"
-                android:paddingRight="5dp"/>
+                android:paddingRight="5dp"
+                android:src="@drawable/ic_rating" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"
-                android:textSize="20dp"/>
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -54,9 +72,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/training_center_name"
+            android:layout_weight="0.99"
             android:padding="10dp"
-            android:text="Course Fee: 25000"
-            android:layout_weight="0.99"/>
+            android:text="Course Fee: 25000" />
 
         <TextView
             android:id="@+id/textView2"
@@ -65,12 +83,11 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_below="@id/rating"
+            android:padding="10dp"
             android:text="3km"
-            android:textSize="20dp"
-            android:padding="10dp"/>
+            android:textSize="20dp" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
