--- a/app/src/main/res/drawable/ic_sign.xml
+++ b/app/src/main/res/drawable/ic_sign.xml
@@ -1,14 +1,48 @@
-<vector android:height="24dp" android:viewportHeight="60.0"
-    android:viewportWidth="60.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
+<!--
+  ~ Skill India
+  ~ Copyright (C) 2017  e-LEMON-ators
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation, either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
+  -->
+
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="60.0"
+    android:viewportWidth="60.0">
+    <path
+        android:fillColor="#00000000"
         android:pathData="M28.66,4L28.66,1"
-        android:strokeColor="#38454F" android:strokeLineCap="round" android:strokeWidth="2"/>
-    <path android:fillColor="#00000000"
+        android:strokeColor="#38454F"
+        android:strokeLineCap="round"
+        android:strokeWidth="2" />
+    <path
+        android:fillColor="#00000000"
         android:pathData="M28.66,59L28.66,40"
-        android:strokeColor="#38454F" android:strokeLineCap="round" android:strokeWidth="2"/>
-    <path android:fillColor="#00000000"
+        android:strokeColor="#38454F"
+        android:strokeLineCap="round"
+        android:strokeWidth="2" />
+    <path
+        android:fillColor="#00000000"
         android:pathData="M28.66,20L28.66,24"
-        android:strokeColor="#38454F" android:strokeLineCap="round" android:strokeWidth="2"/>
-    <path android:fillColor="#23A24D" android:pathData="M48.55,20H10.06c-1.32,0 -2.4,-1.07 -2.4,-2.4V6.4C7.66,5.07 8.74,4 10.06,4h38.49l8.71,7.84c0.09,0.09 0.09,0.23 0,0.32L48.55,20z"/>
-    <path android:fillColor="#EBBA16" android:pathData="M11.45,40h38.82c1.32,0 2.4,-1.07 2.4,-2.4V26.4c0,-1.32 -1.07,-2.4 -2.4,-2.4H11.45l-8.71,7.84c-0.09,0.09 -0.09,0.23 0,0.32L11.45,40z"/>
+        android:strokeColor="#38454F"
+        android:strokeLineCap="round"
+        android:strokeWidth="2" />
+    <path
+        android:fillColor="#23A24D"
+        android:pathData="M48.55,20H10.06c-1.32,0 -2.4,-1.07 -2.4,-2.4V6.4C7.66,5.07 8.74,4 10.06,4h38.49l8.71,7.84c0.09,0.09 0.09,0.23 0,0.32L48.55,20z" />
+    <path
+        android:fillColor="#EBBA16"
+        android:pathData="M11.45,40h38.82c1.32,0 2.4,-1.07 2.4,-2.4V26.4c0,-1.32 -1.07,-2.4 -2.4,-2.4H11.45l-8.71,7.84c-0.09,0.09 -0.09,0.23 0,0.32L11.45,40z" />
 </vector>
