--- a/app/src/main/res/layout/fragment_sector_agriculture.xml
+++ b/app/src/main/res/layout/fragment_sector_agriculture.xml
@@ -37,8 +37,8 @@
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:onClick="husbandry"
-                android:foreground="?selectableItemBackground">
+                android:foreground="?selectableItemBackground"
+                android:onClick="husbandry">
 
                 <LinearLayout
                     android:layout_width="match_parent"
