--- a/app/src/main/res/layout/fragment_dashboard_setup.xml
+++ b/app/src/main/res/layout/fragment_dashboard_setup.xml
@@ -25,34 +25,34 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_gravity="top"
-        android:src="@drawable/ic_dashboard_trainer"
-        android:paddingBottom="16dp"
-        android:scaleType="fitCenter"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp" />
+        android:layout_gravity="top"
+        android:layout_marginTop="100dp"
+        android:paddingBottom="16dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_dashboard_trainer" />
 
     <TextView
         android:id="@+id/setup_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register as a trainer"
-        android:textSize="20dp"
-        android:textAppearance="?android:textAppearanceMedium"
         android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true" />
+        android:text="Register as a trainer"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textSize="20dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/setup_tv"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
         android:background="?selectableItemBackground"
         android:onClick="setupOnClick"
         android:text="Enroll"
-        android:textSize="25dp"
         android:textColor="@color/accent"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/setup_tv"
-        android:layout_centerHorizontal="true" />
+        android:textSize="25dp" />
 </RelativeLayout>
