--- a/app/src/main/res/layout/intro2.xml
+++ b/app/src/main/res/layout/intro2.xml
@@ -45,12 +45,13 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:src="@mipmap/ic_launcher" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_dashboard_learner" />
     </LinearLayout>
 
     <TextView
