--- a/app/src/main/res/layout/intro3.xml
+++ b/app/src/main/res/layout/intro3.xml
@@ -45,26 +45,26 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:padding="16dp"
-            android:src="@mipmap/ic_launcher" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="3"
-            android:gravity="center"
-            android:paddingLeft="64dp"
-            android:paddingRight="64dp"
-            android:text="@string/intro3_description"
-            android:textColor="#ffffff"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="64dp" />
+            android:src="@drawable/ic_dashboard_training_partner" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="3"
+        android:gravity="center"
+        android:paddingLeft="64dp"
+        android:paddingRight="64dp"
+        android:text="@string/intro3_description"
+        android:textColor="#ffffff"
+        android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="64dp" />
 </LinearLayout>
