--- a/app/src/main/res/layout/fragment_sector_agriculture.xml
+++ b/app/src/main/res/layout/fragment_sector_agriculture.xml
@@ -38,7 +38,7 @@
                 android:layout_margin="8dp"
                 android:layout_weight="1"
                 android:foreground="?selectableItemBackground"
-                android:onClick="husbandry">
+                android:onClick="husbandryOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:text="@string/course_animalhusbandry" />
+                        android:text="@string/course_animal_husbandry" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
