--- a/app/src/main/res/layout/activity_animalhusbandry_detail.xml
+++ b/app/src/main/res/layout/activity_animalhusbandry_detail.xml
@@ -18,41 +18,17 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.ramotion.foldingcell.FoldingCell xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:folding-cell="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/folding_cell"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    folding-cell:additionalFlipsCount="2"
+    folding-cell:animationDuration="1300"
+    folding-cell:cameraHeight="30">
 
-    <android.support.design.widget.AppBarLayout xmlns:app="http://schemas.android.com/tools"
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <include layout="@layout/folding_cell_unfolded_content" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/course_animal_husbandry" />
-    </android.support.design.widget.AppBarLayout>
-
-    <com.ramotion.foldingcell.FoldingCell
-        android:id="@+id/folding_cell"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        folding-cell:additionalFlipsCount="2"
-        folding-cell:animationDuration="1300"
-        folding-cell:cameraHeight="30">
-
-        <!-- CONTENT     (UNFOLDED) LAYOUT (MUST BE AT LEAST 2x times BIGGER than content layout bellow)-->
-        <include layout="@layout/fragment_course_animalhusbandry_cell_content" />
-
-        <!-- TITLE (FOLDED) LAYOUT (MUST BE AT LEAST 2x times SMALLER than content layout above) -->
-        <include layout="@layout/fragment_course_animalhusbandry_cell_title" />
-    </com.ramotion.foldingcell.FoldingCell>
-</LinearLayout>
+    <include layout="@layout/folding_cell_folded_content" />
+</com.ramotion.foldingcell.FoldingCell>
