--- a/app/src/main/res/layout/folding_cell_folded_content.xml
+++ b/app/src/main/res/layout/folding_cell_folded_content.xml
@@ -19,12 +19,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,7 +86,7 @@
                     android:text="Course Fee: 25000" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
