--- a/app/src/main/res/layout/folding_cell_unfolded_content.xml
+++ b/app/src/main/res/layout/folding_cell_unfolded_content.xml
@@ -18,14 +18,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_margin="16dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:visibility="gone">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="16dp">
         <!-- content header line -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,6 +41,7 @@
                 android:paddingTop="7dp">
 
                 <TextView
+                    android:id="@+id/training_center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -60,6 +61,7 @@
                         android:src="@drawable/ic_rating" />
 
                     <TextView
+                        android:id="@+id/demand_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="5"
@@ -84,6 +86,7 @@
                         android:src="@drawable/ic_trainingpartner2" />
 
                     <TextView
+                        android:id="@+id/training_partner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
@@ -102,6 +105,7 @@
                         android:src="@drawable/ic_rupee" />
 
                     <TextView
+                        android:id="@+id/course_fee"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
@@ -120,6 +124,7 @@
                         android:src="@drawable/ic_briefcase" />
 
                     <TextView
+                        android:id="@+id/job_role"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
@@ -138,6 +143,7 @@
                         android:src="@drawable/ic_calendar" />
 
                     <TextView
+                        android:id="@+id/course_duration"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
@@ -156,10 +162,11 @@
                         android:src="@drawable/ic_sign" />
 
                     <TextView
+                        android:id="@+id/address"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Address: 25/53,AMmpa Nagar,Karna,Delhi" />
+                        android:text="Address: 25/53, AMmpa Nagar,Karna,Delhi" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -175,11 +182,14 @@
                         android:src="@drawable/ic_call"
                         android:tint="@color/colorPrimary" />
 
-                    <TextView
+                    <Button
+                        android:id="@+id/contact_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:background="?selectableItemBackground"
                         android:gravity="center|start"
                         android:text="CONTACT"
+                        android:textColor="@color/primary"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
